<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:layout_gravity="center_horizontal" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <Button android:layout_gravity="center" android:id="@id/alllog" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="30.0dip" android:text="@string/alllog" />
        <CheckBox android:gravity="center" android:id="@id/bugreport" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/c_bugreport" />
        <Button android:enabled="false" android:id="@id/upload" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/upload" />
        <TextView android:gravity="center" android:id="@id/upload_result" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/pleass_upload" />
        <TextView android:gravity="center_horizontal" android:id="@id/location" android:paddingLeft="10.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" />
        <Button android:id="@id/moreoptions" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/moreoptions" />
    </LinearLayout>
</ScrollView>