<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:id="@id/background" android:background="@drawable/lan_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.huami.watch.wearlogger.WaveProgressBar android:id="@id/progress_bar" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    <com.huami.watch.wearlogger.HmProgressTextView android:textSize="76.0sp" android:id="@id/upload_percent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="78.0dip" android:text="@string/zero" android:layout_centerHorizontal="true" />
    <TextView android:textSize="21.0sp" android:id="@id/percent_sign" android:paddingTop="18.0dip" android:layout_width="wrap_content" android:layout_height="58.69998dip" android:layout_marginLeft="6.299988dip" android:text="@string/percent_sign" android:layout_toRightOf="@id/upload_percent" android:layout_alignTop="@id/upload_percent" />
    <ImageView android:id="@id/success_bg" android:visibility="gone" android:layout_width="90.69998dip" android:layout_height="90.5dip" android:layout_marginTop="47.799988dip" android:src="@drawable/lan_upload_success_bg" android:layout_centerHorizontal="true" />
    <ImageView android:id="@id/button" android:background="@drawable/lan_upload_success_btn" android:paddingLeft="10.899994dip" android:paddingTop="16.199982dip" android:paddingRight="11.0dip" android:paddingBottom="16.099976dip" android:visibility="invisible" android:layout_width="53.69998dip" android:layout_height="53.69998dip" android:layout_marginTop="66.19998dip" android:src="@drawable/lan_upload_success" android:layout_centerHorizontal="true" />
    <TextView android:textSize="18.699982sp" android:id="@id/upload_result" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="18.399994dip" android:layout_below="@id/button" android:layout_centerHorizontal="true" />
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="100.0dip">
        <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <ImageView android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/wifi_icon" android:visibility="gone" android:layout_width="32.0dip" android:layout_height="32.0dip" android:src="@drawable/lan_quicksettings_icon_wifi_small" android:layout_weight="1.0" />
            <TextView android:textSize="18.699982sp" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/state_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/preparing" android:layout_weight="1.0" />
            <TextView android:textSize="14.0sp" android:gravity="center|top" android:id="@id/please_keep_wifi" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/please_keep_wifi_connected" android:layout_weight="1.0" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>